fix font boosting in mobile browsers, add gap before time in posts page, remove repeated css from projects page,

--- a/static/posts.css
+++ b/static/posts.css
@@ -22,4 +22,6 @@ div.posts > a > time {
     font-family: monospace;
     font-size: 0.8rem;
     color: var(--gray-7);
+    min-width: 5rem;
+    direction: rtl;
 }
